# spec

./: README.md
proto/: BUILD.bazel
proto/tendermint/abci/: types.proto
proto/tendermint/blocksync/: types.proto
proto/tendermint/consensus/: types.proto
proto/tendermint/crypto/: keys.proto
proto/tendermint/p2p/: conn.proto  pex.proto  types.proto
proto/tendermint/statesync/: types.proto
proto/tendermint/types/: block.proto  evidence.proto  params.proto  types.proto  validator.proto
proto/tendermint/version/: types.proto
spec/abci++/: abci++_properties_001_draft.md
