# Copyright (C) 2021 CryptoGenome dev team & contributors
#
# This file is part of CryptoGenome.
#
# CryptoGenome is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# CryptoGenome is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with CryptoGenome.  If not, see <http://www.gnu.org/licenses/>.
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

proto_library(
    name = "crypto",
    srcs = [
        "tendermint/crypto/keys.proto",
        "tendermint/crypto/proof.proto",
    ],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "crypto_cpp_grpc",
    protos = [":crypto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "bits",
    srcs = ["tendermint/libs/bits/types.proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "bits_cpp_grpc",
    protos = [":bits"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "mempool",
    srcs = ["tendermint/mempool/types.proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "mempool_cpp_grpc",
    protos = [":mempool"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "version",
    srcs = ["tendermint/version/types.proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "version_cpp_grpc",
    protos = [":version"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "types-validator",
    srcs = [
        "tendermint/types/validator.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [":crypto"],
)

cpp_grpc_library(
    name = "types-validator_cpp_grpc",
    protos = [":types-validator"],
    visibility = ["//visibility:public"],
    deps = [":crypto_cpp_grpc"],
)

proto_library(
    name = "types-block",
    srcs = [
        "tendermint/types/block.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":types-evidence",
        ":types-types",
    ],
)

cpp_grpc_library(
    name = "types-block_cpp_grpc",
    protos = [":types-block"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-evidence_cpp_grpc",
        ":types-types_cpp_grpc",
    ],
)

proto_library(
    name = "types-evidence",
    srcs = [
        "tendermint/types/evidence.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":types-types",
        ":types-validator",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cpp_grpc_library(
    name = "types-evidence_cpp_grpc",
    protos = [":types-evidence"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-types_cpp_grpc",
        ":types-validator_cpp_grpc",
        # "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "types-params",
    srcs = [
        "tendermint/types/params.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

cpp_grpc_library(
    name = "types-params_cpp_grpc",
    protos = [":types-params"],
    visibility = ["//visibility:public"],
    deps = [
        # "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "types-types",
    srcs = [
        "tendermint/types/types.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto",
        ":types-validator",
        ":version",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cpp_grpc_library(
    name = "types-types_cpp_grpc",
    protos = [":types-types"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_cpp_grpc",
        ":types-validator_cpp_grpc",
        ":version_cpp_grpc",
    ],
)

proto_library(
    name = "blocksync",
    srcs = ["tendermint/blocksync/types.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-block",
    ],
)

cpp_grpc_library(
    name = "blocksync_cpp_grpc",
    protos = [":blocksync"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-block_cpp_grpc",
    ],
)

proto_library(
    name = "consensus",
    srcs = ["tendermint/consensus/types.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":bits",
        ":types-types",
    ],
)

cpp_grpc_library(
    name = "consensus_cpp_grpc",
    protos = [":consensus"],
    visibility = ["//visibility:public"],
    deps = [
        ":bits_cpp_grpc",
        ":types-types_cpp_grpc",
    ],
)

proto_library(
    name = "p2p",
    srcs = [
        "tendermint/p2p/conn.proto",
        "tendermint/p2p/pex.proto",
        "tendermint/p2p/types.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cpp_grpc_library(
    name = "p2p_cpp_grpc",
    protos = [":p2p"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_cpp_grpc",
    ],
)

proto_library(
    name = "statesync",
    srcs = ["tendermint/statesync/types.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-params",
        ":types-types",
    ],
)

cpp_grpc_library(
    name = "statesync_cpp_grpc",
    protos = [":statesync"],
    visibility = ["//visibility:public"],
    deps = [
        ":types-params_cpp_grpc",
        ":types-types_cpp_grpc",
    ],
)

proto_library(
    name = "abci_grpc",
    srcs = ["tendermint/abci/types.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto",
        ":types-params",
        ":types-types",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cpp_grpc_library(
    name = "abci_grpc_cpp",
    protos = [":abci_grpc"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_cpp_grpc",
        ":types-params_cpp_grpc",
        ":types-types_cpp_grpc",
    ],
)
